--- a/daliuge-engine/dlg/manager/web/dim.html
+++ b/daliuge-engine/dlg/manager/web/dim.html
@@ -1,150 +1,153 @@
 <!doctype html>
 
 <head>
-	<meta charset="utf-8">
-	<title>{{dmType}}</title>
-	<link rel="shortcut icon" type="image/svg" href="static/icons/liuFavIcon.svg"/>
-	<script src="/static/js/d3/d3.v5.min.js"></script>
-	<script src="/static/js/dm.js"></script>
-	<script src="/static/js/jquery-3.6.0.min.js"></script>
-	<script src="/static/js/bootstrap.bundle.min.js"></script>
-	<script src="/static/js/bootbox.min.js"></script>
-	<link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-	<link  href="/static/css/dm.css" rel="stylesheet" type="text/css"/>
-	<link  href="/static/css/progressBar.css" rel="stylesheet" type="text/css"/>
-	<style>
-		@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css";
-	</style>
+    <meta charset="utf-8">
+    <title>{{dmType}}</title>
+    <link rel="shortcut icon" type="image/svg" href="static/icons/liuFavIcon.svg" />
+    <script src="/static/js/d3/d3.v5.min.js"></script>
+    <script src="/static/js/dm.js"></script>
+    <script src="/static/js/jquery-3.6.0.min.js"></script>
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/bootbox.min.js"></script>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/dm.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/progressBar.css" rel="stylesheet" type="text/css" />
+    <style>
+        @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css";
+    </style>
 </head>
 
 <body>
-	<!-- custom bootstrap navbar -->
-	<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #004085;">
-		<!-- Navbar content -->
-		<a href="/" class="navbar-brand inactiveLink">
-			<object data="/static/icons/liu.svg" type="image/svg+xml" width="30" height="30" class="d-inline-block align-top" alt="LiuIcon"></object>
-			<img src="/static/icons/engine.svg" width="auto" height="30" class="d-inline-block align-top" alt="EngineIcon">
-			<span>{{dmType}}</span>
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="nav navbar-nav navbar-center">
+    <!-- custom bootstrap navbar -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #004085;">
+        <!-- Navbar content -->
+        <a href="/" class="navbar-brand inactiveLink">
+            <object data="/static/icons/liu.svg" type="image/svg+xml" width="30" height="30"
+                class="d-inline-block align-top" alt="LiuIcon"></object>
+            <img src="/static/icons/engine.svg" width="auto" height="30" class="d-inline-block align-top"
+                alt="EngineIcon">
+            <span>{{dmType}}</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="nav navbar-nav navbar-center">
             </ul>
-			<ul class="nav navbar-nav  ml-auto">
-			</ul>
-		</div>
-	</nav>
-	<div id="graphNameWrapper">
+            <ul class="nav navbar-nav  ml-auto">
+            </ul>
+        </div>
+    </nav>
+    <div id="graphNameWrapper">
         <li id="islandDisplay"></li>
         <li id="nodeDisplay"></li>
     </div>
-	<div id="dimContentWrapper" class="container">
-    <div id="sessions">
-        <h4>Sessions</h4>
-        <table class="table table-striped" id="sessionsTable">
-            <thead>
-            <tr>
-                <th>Session ID</th>
-                <th>State</th>
-                <th># Drops</th>
-                <th>Details</th>
-            <th></th>
-					</tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-        <button class="btn btn-secondary" id="addSessionBtn" type="button"><span class="fa fa-plus"></span>
-            Add Session
-        </button>
-        <button class="btn btn-secondary" id="refreshSessionListBtn" type="button"><span
-                class="fa fa-refresh"></span> Refresh
-        </button>
+    <div id="dimContentWrapper" class="container">
+        <div id="sessions">
+            <h4>Sessions</h4>
+            <table class="table table-striped" id="sessionsTable">
+                <thead>
+                    <tr>
+                        <th>Session ID</th>
+                        <th>State</th>
+                        <th># Drops</th>
+                        <th>Details</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+            <button class="btn btn-secondary" id="addSessionBtn" type="button"><span class="fa fa-plus"></span>
+                Add Session
+            </button>
+            <button class="btn btn-secondary" id="refreshSessionListBtn" type="button"><span
+                    class="fa fa-refresh"></span> Refresh
+            </button>
+        </div>
+
+        <div id="nodes">
+            <h4>Nodes</h4>
+            <table class="table table-striped" id="nodesTable">
+                <thead>
+                    <tr>
+                        <th>Node</th>
+                        <th>Details</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <button class="btn btn-secondary" id="refreshNodeListBtn" type="button"><span class="fa fa-refresh"></span>
+                Refresh
+            </button>
+        </div>
+
     </div>
 
-    <div id="nodes">
-        <h4>Nodes</h4>
-        <table class="table table-striped" id="nodesTable">
-            <thead>
-            <tr>
-                <th>Node</th>
-                <th>Details</th>
-            </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-        <button class="btn btn-secondary" id="refreshNodeListBtn" type="button"><span
-                class="fa fa-refresh"></span> Refresh
-        </button>
-    </div>
+    <script type="text/javascript">
 
-</div>
+        var selectedNode = '{{selectedNode}}';
+        if (selectedNode == '') {
+            selectedNode = null;
+        }
+        var serverUrl = '{{serverUrl}}';
+        var dmPort = {{ dmPort }}
+        var nodes = {{!nodes}}
 
-	<script type="text/javascript">
+        var refreshSessionListBtn = d3.select('#refreshSessionListBtn');
+        var addSessionBtn = d3.select('#addSessionBtn');
+        var sessionsTbodyEl = d3.select('#sessionsTable tbody');
 
-    var selectedNode = '{{selectedNode}}';
-    if (selectedNode == '') {
-        selectedNode = null;
-    }
-    var serverUrl = '{{serverUrl}}';
-    var dmPort = {{dmPort}}
-    var nodes = {{!nodes}}
-    
-    var refreshSessionListBtn = d3.select('#refreshSessionListBtn');
-    var addSessionBtn = d3.select('#addSessionBtn');
-    var sessionsTbodyEl = d3.select('#sessionsTable tbody');
+        var serverIP = serverUrl.split("//").pop().split(":").shift();// Show/hide parts of the UI depending on whether we're zooming in or not
 
-    var serverIP = serverUrl.split("//").pop().split(":").shift();// Show/hide parts of the UI depending on whether we're zooming in or not
+        // into a specific node
+        if (selectedNode) {
+            d3.select('#nodes').remove();
+            d3.select('#islandDisplay').html("<a href=" + serverUrl + ">DIM: " + serverIP + "</a>");
+            d3.select('#nodeDisplay').html("<a href=" + serverUrl + "/?node=" + selectedNode + "&dim_url=" + serverUrl + ">Node: " + selectedNode + "</a>");
+        } else {
+            d3.select('#zoom-notice').remove();
+            d3.select('#nodeDisplay').remove();
+            d3.select('#islandDisplay').html("<a href=" + serverUrl + ">DIM: " + serverIP + "</a>");
+        }
 
-    // into a specific node
-    if (selectedNode) {
-        d3.select('#nodes').remove();
-        d3.select('#islandDisplay').html("<a href="+serverUrl+">DIM: " + serverIP+"</a>");
-		d3.select('#nodeDisplay').html("<a href="+serverUrl+"/?node="+selectedNode+"&dim_url="+serverUrl+">Node: " + selectedNode+"</a>");
-    } else {
-        d3.select('#zoom-notice').remove();
-        d3.select('#nodeDisplay').remove();
-        d3.select('#islandDisplay').html("<a href="+serverUrl+">DIM: " + serverIP+"</a>");
-	}
+        // Animated filling of DropManagers and Nodes table
+        function fillTable(selector, data, href_function, nodeHref) {
+            data.sort();
+            var rows = d3.select(selector).selectAll('tr').data(data);
+            // rows.enter().append('tr');
+            var newRow = rows.enter().append('tr');
+            var nodeName = String;
+            newRow.style('opacity', 0.0).transition().delay(0).duration(500).style('opacity', 1.0)
+            newRow.append('td').classed('id', true)
+                .append('a').attr("href", nodeHref).text(String);
+            newRow.append('td').classed('details', true)
+                .append('a').attr('href', href_function)
+                .append('span').classed('fa fa-share', true);
+        }
+        if (!selectedNode) {
+            fillTable('#nodesTable tbody', nodes, function (n) { return '?node=' + n + "&dim_url=" + serverUrl; }, function (n) { return "http://" + n + "?dim_url=" + serverUrl });
+        }
 
-	// Animated filling of DropManagers and Nodes table
-	function fillTable(selector, data, href_function, nodeHref) {
-		data.sort();
-		var rows = d3.select(selector).selectAll('tr').data(data);
-		// rows.enter().append('tr');
-		var newRow = rows.enter().append('tr');
-		var nodeName = String;
-		newRow.style('opacity', 0.0).transition().delay(0).duration(500).style('opacity',1.0)
-		newRow.append('td').classed('id', true)
-			.append('a').attr("href", nodeHref).text(String);
-		newRow.append('td').classed('details', true)
-			.append('a').attr('href', href_function)
-			.append('span').classed('fa fa-share', true);
-	}
-	if( !selectedNode ) {
-		fillTable('#nodesTable tbody', nodes, function(n) { return '?node=' + n+"&dim_url="+serverUrl; }, function(n){return "http://"+n+":8000"+"?dim_url="+serverUrl});
-	}
-
-    // Listeners for the two session-related buttons
-    if (!selectedNode) {
-        addSessionBtn.on('click', function () {
-            promptNewSession(serverUrl, sessionsTbodyEl, refreshSessionListBtn);
+        // Listeners for the two session-related buttons
+        if (!selectedNode) {
+            addSessionBtn.on('click', function () {
+                promptNewSession(serverUrl, sessionsTbodyEl, refreshSessionListBtn);
+            });
+        } else {
+            addSessionBtn.remove()
+        }
+        refreshSessionListBtn.on('click', function () {
+            loadSessions(serverUrl, sessionsTbodyEl, refreshSessionListBtn, selectedNode);
         });
-    } else {
-        addSessionBtn.remove()
-    }
-    refreshSessionListBtn.on('click', function () {
-        loadSessions(serverUrl, sessionsTbodyEl, refreshSessionListBtn, selectedNode);
-    });
 
-    //Start loading the list of sessions periodically
-    var loadSessionTimer =d3.timer(function () {
-        loadSessions(serverUrl, sessionsTbodyEl, refreshSessionListBtn, selectedNode, 5000);
-        loadSessionTimer.stop()
-		return;
-    });
+        //Start loading the list of sessions periodically
+        var loadSessionTimer = d3.timer(function () {
+            loadSessions(serverUrl, sessionsTbodyEl, refreshSessionListBtn, selectedNode, 5000);
+            loadSessionTimer.stop()
+            return;
+        });
 
-	</script>
+    </script>
 </body>
