LIU-470: Per-app logging from the web UI
- Setup a logging handler for the AppDrop class
- Add REST endpoint in the DropManagers to get collected logs for each AppDROP.
- Add basic clickable link to REST API call in the DIM web UI

--- a/daliuge-engine/dlg/manager/web/session.html
+++ b/daliuge-engine/dlg/manager/web/session.html
@@ -95,7 +95,7 @@
         d3.select('#pg-graph').remove();
 
 	const width = $('#pg-progress-bar').innerWidth();
-	var graph_update_handler = function(oids, dropSpecs) {};
+	var graph_update_handler = function(oids, dropSpecs, url) {};
 
 	var status_update_handler = function(statuses){
 		// This is the order in which blocks are drawn in the progress bar,
