LIU-470: Add unittests for app logging.

--- a/daliuge-engine/dlg/manager/web/drop_log.html
+++ b/daliuge-engine/dlg/manager/web/drop_log.html
@@ -68,7 +68,7 @@
     <ul id="graphName">
         <li>Session:{{data.get("session")}}</li>
         <li></li>
-        <li>DROP: {{data.get("uid")}}</li>
+        <li>DROP: {{data.get("oid")}}</li>
     </ul>
 </div>
 <div id="dimContentWrapper">
