LIU-457: Error management system initial work
- Started mapping exceptions to error codes
- Documentation linkage is in its infancy but works.
- Updating existing exceptions to be clearer about the cause.

Signed-off-by: Ryan Bunney <ryanbunney@fastmail.com>

--- a/daliuge-engine/dlg/manager/web/drop_log.html
+++ b/daliuge-engine/dlg/manager/web/drop_log.html
@@ -96,7 +96,7 @@
                 %for row in data["logs"]:
                 <tr>
                     % for col in columns:
-                    <td class="text-start">{{! row.get(col, '') }}</td>
+                    <td class="text-start wrap-text">{{! row.get(col, '') }}</td>
                     % end
                 </tr>
                 %end
