--- a/daliuge-translator/dlg/dropmake/web/pg_viewer.html
+++ b/daliuge-translator/dlg/dropmake/web/pg_viewer.html
@@ -146,7 +146,7 @@
                 <div class="modal-body">
                     <form action="/gen_pg" method="get" target="deploy_target" name="deploy_target" id="pg_form" >
                         <div id="neccessaryHiddenItems">
-                            <input id="managerUrlInput" type="text" name="dlg_mgr_url" value="http://localhost:8001" size="40" style="font-size:16px;">
+                            <input id="managerUrlInput" type="text" name="dlg_mgr_url" value="http://dlg-dim.localhost" size="40" style="font-size:16px;">
                             <input type="checkbox" id="dlg_mgr_deploy" name="dlg_mgr_deploy" value="deploy" checked>
                             <input name="pgt_id" value="{{pgt_view_json_name}}">
                         </div>
