LIU-523: Add version to manager webpages

--- a/daliuge-engine/dlg/manager/web/drop_log.html
+++ b/daliuge-engine/dlg/manager/web/drop_log.html
@@ -28,6 +28,7 @@
         <img src="/static/icons/engine.svg" width="auto" height="30"
              class="d-inline-block align-top" alt="EngineIcon">
         <span>DROP Log Viewer</span>
+        <span class="navbar-text text-muted">{{version}}</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
