--- a/daliuge-translator/dlg/dropmake/web/pg_viewer.html
+++ b/daliuge-translator/dlg/dropmake/web/pg_viewer.html
@@ -42,6 +42,7 @@
             <img src="/static/src/icons/translate_green.png" width="30" height="30" class="d-inline-block align-top" alt="">
             <span> Translator </span>
         </a>
+        <span class="navbar-text text-muted">{{version}}</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
