--- a/daliuge-engine/dlg/manager/web/dim.html
+++ b/daliuge-engine/dlg/manager/web/dim.html
@@ -28,6 +28,7 @@
                 alt="EngineIcon">
             <span>{{dmType}}</span>
         </a>
+        <span class="navbar-text text-muted">{{version}}</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
