--- a/daliuge-engine/dlg/manager/web/dm.html
+++ b/daliuge-engine/dlg/manager/web/dm.html
@@ -21,17 +21,17 @@
 	<!-- custom bootstrap navbar -->
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #004085;">
 		<!-- Navbar content -->
-		<a href="/" class="navbar-brand inactiveLink" href="#" disabled>
+		<a href="/" class="navbar-brand inactiveLinkchat" href="#" disabled>
 			<object data="/static/icons/liu.svg" type="image/svg+xml" width="30" height="30" class="d-inline-block align-top" alt="LiuIcon"></object>
 			<img src="/static/icons/engine.svg" width="auto" height="30" class="d-inline-block align-top" alt="EngineIcon">
-			<span>{{dmType}}</span>
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span>{{dmType}}</span>
+            <span class="navbar-text text-muted">{{version}}</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="nav navbar-nav navbar-center">
-
 			</ul>
 			<ul class="nav navbar-nav  ml-auto">
 			</ul>
